# example-skills

./: .env.tpl  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
calculator/: SKILL.md  __init__.py  calculator.py  conversion_rates.json
src/example_skills/: __init__.py  main.py
src/example_skills/skills/text-processor/: SKILL.md  instructions.md
tests/: test_basic.py
